# planqtn

./: .coverage  .cursorignore  .env.local  .gitignore  .pylintrc  AGENTS.md  DEVELOPMENT.md  Dockerfile  Dockerfile.api  Dockerfile.job.planqtn  Dockerfile.jobs  README.md  RELEASE.md  VERSIONING.md  brute_force_enumerator.py  brute_force_enumerator_test.py  build_api_server.sh  build_jobs_image.sh  compose.yml  conftest.py  container_entry_point.sh  diffs.txt  disk_space_at_start.txt  docker_build_and_run.sh  force_stop.sh  initial_attempts.py  legos.py  legos_test.py  linalg.py  mkdocs.yml  multi-service-container-entrypoint.sh  mypy.ini  package-lock.json  package.json  parity_check.py  parity_check_test.py  pyproject.toml  requirements.dev.txt  requirements.txt  scalar_stabilizer_enumerator.py  (+15 more)
app/: README.md  package-lock.json  package.json
check/: all  api  api-integration  cli  jobs  jobs-integration  planqtn  qlego  ui  ui-and-docs
docs/: contributing.md  faq.md  features.md  index.md
hack/: build_api_server.sh  build_jobs_image.sh  cli_build.sh  htn  image_tag  py_build.sh  rerun  setup.sh  start.sh  version_bump.sh
k8s/: README.md  job-monitor-job.yaml
licenses/: LICENSE_CHECKING.md
migrations/: 1747875804781_task-management.js
planqtn/: __init__.py  contraction_visitor.py  legos.py  legos_test.py  linalg.py  max_size_cost_visitor.py  parity_check.py  parity_check_test.py  pauli.py  poly.py  poly_test.py  progress_reporter.py  progress_reporter_test.py  simple_poly.py  simple_poly_test.py  sparsity_visitor.py  (+11 more)
planqtn-cli/: README.md  package.json
(+566 files in other folders)
